--- a/exercise_files/03_02_Other_Numbers.ipynb
+++ b/exercise_files/03_02_Other_Numbers.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "a8a0e4f7",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "427"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "f625c653",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "0.19999999999999996"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,19 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "0e9334d6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Context(prec=28, rounding=ROUND_HALF_EVEN, Emin=-999999, Emax=999999, capitals=1, clamp=0, flags=[], traps=[InvalidOperation, DivisionByZero, Overflow])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'getcontext' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mgetcontext\u001b[49m()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'getcontext' is not defined"
+     ]
     }
    ],
    "source": [
@@ -155,29 +156,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "32dc75fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'getcontext' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mgetcontext\u001b[49m()\u001b[38;5;241m.\u001b[39mprec\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'getcontext' is not defined"
+     ]
+    }
+   ],
    "source": [
     "getcontext().prec=4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "fd4dad61",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Context(prec=4, rounding=ROUND_HALF_EVEN, Emin=-999999, Emax=999999, capitals=1, clamp=0, flags=[], traps=[InvalidOperation, DivisionByZero, Overflow])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'getcontext' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mgetcontext\u001b[49m()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'getcontext' is not defined"
+     ]
     }
    ],
    "source": [
@@ -186,19 +200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "645adafe",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Decimal('0.3333')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'Decimal' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mDecimal\u001b[49m(\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m/\u001b[39m Decimal(\u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Decimal' is not defined"
+     ]
     }
    ],
    "source": [
@@ -207,10 +222,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "4c4f9d41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'getcontext' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mgetcontext\u001b[49m()\u001b[38;5;241m.\u001b[39mprec\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'getcontext' is not defined"
+     ]
+    }
+   ],
    "source": [
     "getcontext().prec=2"
    ]
@@ -324,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
