working through training

--- a/exercise_files/04_02_Tuples_and_sets.ipynb
+++ b/exercise_files/04_02_Tuples_and_sets.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "1f64ecd4",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "tuple"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,17 +411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "ecca91c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "myTuple = (1,2,3)"
+    "myTuple = 1,2,3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "08d209bb",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
        "tuple"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "0c5c57a0",
    "metadata": {},
    "outputs": [],
