--- a/exercise_files/06_03_VariablesAsFunctions.ipynb
+++ b/exercise_files/06_03_VariablesAsFunctions.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "bd899058",
    "metadata": {},
    "outputs": [],
@@ -124,15 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "4e6e3111",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "is than ugly is than is than is than flat is than is than dense cases to break the rules beats never pass in the face of the to guess there be one and only one way to do it that way may not be at first dutch now is than never never is often than right now if the is hard to it's a bad idea if the is easy to it may be a good idea are one great idea let's do more of\n"
+     "ename": "NameError",
+     "evalue": "name 'text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m processingFunctions \u001b[38;5;241m=\u001b[39m [lowercase, removePunctuation, removeNewlines, removeLongWords]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m func \u001b[38;5;129;01min\u001b[39;00m processingFunctions:\n\u001b[1;32m----> 4\u001b[0m     text \u001b[38;5;241m=\u001b[39m func(\u001b[43mtext\u001b[49m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(text)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'text' is not defined"
      ]
     }
    ],
@@ -155,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "9d3bbf30",
    "metadata": {},
    "outputs": [
@@ -165,7 +169,7 @@
        "5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "3867835f",
    "metadata": {},
    "outputs": [
@@ -186,7 +190,7 @@
        "8"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "0cb05720",
    "metadata": {},
    "outputs": [
@@ -207,7 +211,7 @@
        "[2, 3, 4, 5]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "6fcf5c06",
    "metadata": {},
    "outputs": [
@@ -229,7 +233,7 @@
        "[{'num': 1}, {'num': 2}, {'num': 3}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
